# 2dRendererLua

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
assets/scripts/: game_script.lua  level1.lua  level2.lua  simple_test.lua
assets/scripts/tests/: cpp_call_test.lua  reference_test.lua  simple_test.lua
assets/sounds/: .gitattributes
assets/tilemaps/: desert.map
cmake/: Vcpkg.cmake
src/: Game.cpp  Game.h  game.ixx  main.cpp
src/AssetStorage/: asset_storage.ixx
src/Components/: circle_collider_component.ixx  rigid_body_component.ixx  sprite_component.ixx  transform_component.ixx
src/ECS/: ecs.ixx  pool.ixx
src/Game/: game.ixx
src/Logger/: logger.ixx
src/Systems/: collision_system.ixx  movement_system.ixx  render_system.ixx
src/app/src/: main.cpp
src/asset_storage/: asset_storage.ixx
src/components/: animation_component.cppm  animation_component.ixx  box_collider_component.cppm  box_collider_component.ixx  circle_collider_component.cppm  components.ixx  rigid_body_component.cppm  sprite_component.cppm  transform_component.cppm
src/ecs/: ecs.cppm  pool.cppm
src/event_bus/: events_bus.ixx
src/events/: collision_event.cppm  events.ixx  key_press_event.cppm
src/game/: game.cppm  game.ixx
src/lib/: CMakeLists.txt
src/lib/src/asset_storage/: asset_storage.cpp  asset_storage.ixx  asset_storage_impl.cpp
src/lib/src/components/: animation_component.cppm  animation_component.ixx  box_collider_component.cppm  box_collider_component.ixx  camera_follow_component.cppm  camera_follow_component.ixx  circle_collider_component.ixx  components.ixx  health_component.ixx  keyboard_controller_component.cppm  keyboard_controller_component.ixx  projectile_component.ixx  projectile_emitter_component.ixx  rigid_body_component.ixx  script_component.ixx  sprite_component.cppm  sprite_component.ixx  text_label_component.ixx  transform_component.ixx
src/lib/src/ecs/: ecs.cpp  ecs.cppm  ecs.ixx  ecs_impl.cpp  pool.ixx
src/lib/src/event_bus/: events_bus.ixx
src/lib/src/events/: collision_event.ixx  event.ixx  events.ixx  key_press_event.cppm  key_press_event.ixx
src/lib/src/game/: game.cppm  game.ixx  game_impl.cpp  level_loader.ixx  level_loader_impl.cpp
src/lib/src/logger/: logger.ixx
src/lib/src/systems/: animation_system.ixx  camera_movement_system.cppm  camera_movement_system.ixx  collision_system.cppm  collision_system.ixx  damage_system.cppm  damage_system.ixx  debug_collider_system.cppm  debug_collider_system.ixx  health_bar_render_system.ixx  keyboard_control_system.cppm  keyboard_control_system.ixx  movement_system.ixx  projectile_emit_system.ixx  projectile_lifecycle_system.ixx  render_gui_system.ixx  render_system.cppm  render_system.ixx  render_text_system.ixx  script_system.ixx  systems.ixx
src/logger/: logger.ixx
src/map/: settings.cppm
src/systems/: animation_system.cppm  animation_system.ixx  camera_movement_system.cppm  collision_system.cppm  collision_system.ixx  damage_system.cppm  debug_collider_system.cppm  debug_collider_system.ixx  keyboard_control_system.cppm  movement_system.cppm  render_system.cppm  systems.ixx
test/src/: damage_system_tests.cpp  lua_tests.cpp  movement_system_test.cpp  pool_tests.cpp  registry_tests.cpp
